<resources>
    <string name="app_name">AgendaGeo</string>
    <string name="title_dashboard">Mapa</string>
    <string name="title_notifications">Nuevo Evento</string>
    <string name="titulo_del_evento">Titulo del evento</string>
    <string name="longitud">Longitud de la ubicación</string>
    <string name="latitud">latitud de la ubicación</string>
    <string name="descripcion">descripcion</string>
    <string name="titulo">Título</string>
    <string name="fecha">Fecha</string>
    <string name="descripcion_evento">Descripcion</string>
    <string name="title_eventos">Eventos</string>
</resources>